@@ -1610,6 +1610,18 @@ test entry-21.1 {selection present while disabled, bug 637828} {
     lappend out [.e selection present] [selection get]
 } {1 1 345}
 
+test entry-22.1 {lost namespaced textvar} {
+    destroy .e
+    namespace eval test { variable foo {a b} }
+    entry .e -textvariable ::test::foo
+    namespace delete test
+    .e insert end "more stuff"
+    .e delete 5 end
+    catch {set ::test::foo} result
+    list [.e get] [.e cget -textvar] $result
+} [list "a bmo" ::test::foo \
+	{can't read "::test::foo": no such variable}]
+
 destroy .e
 
 # XXX Still need to write tests for EntryBlinkProc, EntryFocusProc,
